tests/negative/gold/prefixed-assign1b-test.gold
tests/negative/prefixed-assign1b-test.toit:8:6: error: Can't assign to unknown 'non-existent'
  pa.non-existent += 3
     ^~~~~~~~~~~~
Compilation failed
